JSAPI-3183 fix IE8 scroller z-index  problem

--- a/src/DGCustomization/skin/default/css/baron.css
+++ b/src/DGCustomization/skin/default/css/baron.css
@@ -6,7 +6,6 @@
 
 .scroller__bar-wrapper {
     position: absolute;
-    z-index: 3;
     top: 0;
     bottom: 0;
     right: 7px;
